# chain-signer

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  STATUS.md  glama.json  pyproject.toml  server.json
.github/workflows/: release.yml
.mcp-pub/: login.out  server.json
chain_signer/: __init__.py  action_gate.py  api.py  balance.py  bitcoin.py  bridge.py  cli.py  fee.py  gas.py  live.py  mcp_server.py  mcp_stdio.py  preflight.py  sig_inspect.py  solana.py  swap.py  tx.py  wallet.py
docs/: ADOPTION.md  JOURNEY.md  PIPELINE.md  SUITE.md  THREAT-COVERAGE.md  distribution-plan.md  handoff.md  operating-doctrine.md
docs/distribution/: awesome-mcp-pr-draft.md
docs/marketing/: dev-intro-post.md
docs/patterns/: CATALOG.md  audit-2026-06-01.md
docs/plans/: chain-signer.md  preflight.md  v1-productization.md
docs/recon/: chain-signer.md
docs/research/: 2026-05-31-gasless.md  2026-05-31-landscape.md  2026-06-01-bridge.md  2026-06-01-burner-wallet-for-ai-market.md  2026-06-01-business-think-verdict.md  2026-06-01-customer1-feedback.md  2026-06-01-demand-hunt-raw.json  2026-06-01-demand-hunt.md  2026-06-01-hackathon-raw.json  2026-06-01-hackathon.md  2026-06-01-opportunity-scout.md  2026-06-01-x402-demand-check.md  2026-06-02-sealed-receipt-demand.md
docs/reviews/: 2026-05-31-live-proof.md  2026-05-31-plan-review.md
examples/: agent_safety_demo.py  quickstart.py
tests/: test_action_gate.py  test_adoption.py  test_api.py  test_balance.py  test_balance_errors.py  test_bitcoin_balance.py  test_bitcoin_send.py  test_bitcoin_wallet.py  test_bridge.py  test_burner.py  test_call_contract.py  test_cli.py  test_encrypted.py  test_example_quickstart.py  test_gas.py  test_harden_allowed_and_toolname.py  test_harden_new_tools.py  test_hardening2.py  test_live.py  test_mcp.py  test_mcp_bridge.py  test_mcp_dispatch_failsafe.py  test_mcp_multichain.py  test_mcp_safety_tools.py  test_mcp_send_onecall.py  test_mcp_stdio.py  test_paraswap.py  test_preflight.py  test_preflight_aggregator_swap.py  test_preflight_dai_permit.py  test_preflight_deepnest.py  test_preflight_dsproxy.py  test_preflight_eip7702.py  test_preflight_eip7702_harden.py  test_preflight_erc777_operator.py  test_preflight_exec_wrapper.py  test_preflight_hardening.py  test_preflight_multicall.py  test_preflight_multicall3_aggregate.py  test_preflight_multicall_variants.py  (+26 more)
tools/: adoption.py  e2e_gate.sh  e2e_smoke.sh  fetch_wheel.py  notify.sh
