[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chain-signer"
version = "0.4.2"
description = "Non-custodial burner-wallet toolkit for AI agents. Your agent holds its own key and signs + posts directly — make a fresh wallet, read balance, send, and swap in a few lines. No MetaMask, no GUI, no account."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "chain-signer" }]
keywords = ["ai-agents", "wallet", "non-custodial", "burner-wallet", "ethereum", "evm", "web3", "crypto", "agent-tools"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Office/Business :: Financial",
]
dependencies = ["web3>=7", "eth-account", "eth-abi", "eth-utils"]

[project.optional-dependencies]
solana = ["solders", "base58"]
bitcoin = ["bit"]
all = ["solders", "base58", "bit"]

[project.scripts]
chain-signer = "chain_signer.cli:main"
chain-signer-mcp = "chain_signer.mcp_stdio:main"

[project.urls]
Homepage = "https://github.com/Kevthetech143/chain-signer"
Documentation = "https://github.com/Kevthetech143/chain-signer#readme"

[tool.hatch.build.targets.wheel]
packages = ["chain_signer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
